--- a/code.ipynb
+++ b/code.ipynb
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1513,6 +1513,13 @@
       "  chain = LLMChain(llm=model, prompt=chat_prompt)\n",
       "/var/folders/8w/sdx03mds5snd4v7gfh2rksz00000gn/T/ipykernel_30620/1106532232.py:54: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
       "  result = chain.run(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extraktion abgeschlossen. Ergebnisse gespeichert in 'extrahierte_relationen.json'.\n"
      ]
     }
    ],
@@ -1592,6 +1599,59 @@
     "    json.dump(results, f, ensure_ascii=False, indent=2)\n",
     "\n",
     "print(\"Extraktion abgeschlossen. Ergebnisse gespeichert in 'extrahierte_relationen.json'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Datenbereinigung und -korrektur "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input-Datei laden\n",
+    "with open(\"data/json/extrahierte_relationen.json\", 'r', encoding='utf-8') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Ergebnisliste initialisieren\n",
+    "output = []\n",
+    "\n",
+    "for entry in data:\n",
+    "    input_data = entry.get(\"input\", {})\n",
+    "    relations_str = entry.get(\"extracted_relations\", \"[]\")\n",
+    "    \n",
+    "    try:\n",
+    "        relations = json.loads(relations_str)\n",
+    "    except json.JSONDecodeError:\n",
+    "        relations = []\n",
+    "\n",
+    "    transformed = {\n",
+    "        \"text\": input_data.get(\"text\", \"\"),\n",
+    "        \"datei\": input_data.get(\"datei\", \"\"),\n",
+    "        \"autor\": input_data.get(\"autor\", \"\"),\n",
+    "        \"ref\": input_data.get(\"ref\", \"\"),\n",
+    "        \"graph\": relations\n",
+    "    }\n",
+    "\n",
+    "    output.append(transformed)\n",
+    "\n",
+    "# Ausgabe-Datei schreiben\n",
+    "with open('data/json/output.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(output, f, indent=2, ensure_ascii=False)\n"
    ]
   },
   {
