--- a/code.ipynb
+++ b/code.ipynb
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,82 +1461,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Neue Entity- und Relationstypen\n",
     "entity_types = ['person', 'location', 'organization', 'date']\n",
+    "\n",
     "relation_types = [\n",
-    "    \"geboren_am\", \"geboren_in\",\n",
-    "    \"gestorben_am\", \"gestorben_in\", \"begraben_in\",\n",
-    "    \"wohnhaft_in\", \"lebte_in\", \"wirkte_in\",\n",
+    "    # Biografische Basisdaten\n",
+    "    \"geboren_in\", \"geboren_am\",\n",
+    "    \"gestorben_in\", \"gestorben_am\",\n",
+    "    \"begraben_in\",\n",
+    "\n",
+    "    # Wohn- und Wirkorte\n",
+    "    \"wohnhaft_in\", \"lebte_in\", \"wirkte_in\", \"aufenthalt_in\",\n",
+    "\n",
+    "    # Bildung und Beruf\n",
     "    \"ausgebildet_in\", \"studierte_an\",\n",
+    "    \"lehre_als\", \"lehre_bei\",\n",
+    "    \"tätig_als\", \"tätig_bei\",\n",
     "    \"war\", \"beschäftigt_bei\", \"mitglied_von\",\n",
+    "    \"war_eingeschult\", \"unterrichtet_in\",\n",
+    "\n",
+    "    # Familie\n",
     "    \"verheiratet_mit\", \"kind_von\", \"eltern_von\", \"geschwister_von\",\n",
-    "    \"getauft_am\", \"beigetreten_am\",\n",
-    "    \"interessiert_sich_für\", \"beschäftigt_sich_mit\", \"forscht_zu\",\n",
-    "    \"schreibt_über\", \"unterrichtet_in\",\n",
+    "\n",
+    "    # Religion & Kirche\n",
+    "    \"getauft_am\", \"beigetreten_am\", \"konfirmiert_am\", \"hat_heiliges_abendmahl\",\n",
+    "\n",
+    "    # Interessen & Themen\n",
+    "    \"interessiert_sich_für\", \"beschäftigt_sich_mit\", \"forscht_zu\", \"schreibt_über\",\n",
+    "\n",
+    "    # Reisen & Aufenthalte\n",
     "    \"gereist_nach\", \"besucht\", \"angekommen_in\", \"abgereist_aus\",\n",
-    "    \"aufgehalten_in\", \"zurückgekehrt_nach\", \"verließ\", \"war_in\", \"war_am\", \"gefahren_nach\",\n",
-    "    \"war_eingeschult\"\n",
-    "]"
+    "    \"aufgehalten_in\", \"zurückgekehrt_nach\", \"verließ\", \"war_in\", \"war_am\", \"gefahren_nach\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pydantic Modell\n",
     "class ExtractedInfo(BaseModel):\n",
     "    subjekt: str = Field(description=\"extrahierte Subjekt-Entität, z.B. Daniel Wilhelm Suhl, ich, er, wir, meine l. Frau, seliger Bruder\")\n",
     "    subjekt_type: str = Field(description=\"Typ der Subjekt-Entität, z.B. person\")\n",
     "    prädikat: str = Field(description=\"Beziehung zwischen Subjekt und Objekt\")\n",
-    "    objekt: str = Field(description=\"extrahierte Objekt-Entität, z.B. Gnadenthal, 30 April 1858, Aelteſten - Conferenz\",)\n",
-    "    objekt_type: str = Field(description=\"Typ der Objekt-Entität, z.B. location, date, organisation\")"
+    "    objekt: str = Field(description=\"extrahierte Objekt-Entität, z.B. Gnadenthal, Aeltesten-Konferenz\")\n",
+    "    objekt_type: str = Field(description=\"Typ der Objekt-Entität, z.B. location, organisation\")\n",
+    "    zeit: str = Field(default=None, description=\"Datumsangabe zum Ereignis, z.B. 30 April 1858 oder leer, falls nicht genannt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8w/sdx03mds5snd4v7gfh2rksz00000gn/T/ipykernel_30620/1106532232.py:43: LangChainDeprecationWarning: The class `ChatOllama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import ChatOllama``.\n",
-      "  model = ChatOllama(model=\"llama3\", temperature=0)\n",
-      "/var/folders/8w/sdx03mds5snd4v7gfh2rksz00000gn/T/ipykernel_30620/1106532232.py:44: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  chain = LLMChain(llm=model, prompt=chat_prompt)\n",
-      "/var/folders/8w/sdx03mds5snd4v7gfh2rksz00000gn/T/ipykernel_30620/1106532232.py:54: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  result = chain.run(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extraktion abgeschlossen. Ergebnisse gespeichert in 'extrahierte_relationen.json'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "parser = PydanticOutputParser(pydantic_object=ExtractedInfo)\n",
-    "\n",
-    "# System-Prompt (angepasst)\n",
+    "# Parser mit neuem Modell\n",
+    "parser = PydanticOutputParser(pydantic_object=ExtractedInfo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Systemprompt\n",
     "system_prompt = PromptTemplate(\n",
     "    template=\"\"\"\n",
     "Du arbeitest mit biographischen, historischen und religiösen Texten der Herrnhuter Brüdergemeine.\n",
     "Deine Aufgabe ist es, Relationen zwischen Personen, Orten, Organisationen und Daten zu extrahieren.\n",
     "\n",
     "Gib ausschließlich eine JSON-Liste mit Objekten zurück. Jedes Objekt enthält:\n",
-    "- \"subjekt\", \"subjekt_type\", \"prädikat\", \"objekt\", \"objekt_type\".\n",
+    "- \"subjekt\", \"subjekt_type\", \"prädikat\", \"objekt\", \"objekt_type\", \"zeit\".\n",
     "\n",
     "Die erlaubten Entitätstypen sind: {entity_types}\n",
     "Die erlaubten Beziehungstypen sind: {relation_types}\n",
@@ -1545,9 +1545,16 @@
     "\"\"\",\n",
     "    input_variables=[\"entity_types\", \"relation_types\"]\n",
     ")\n",
-    "system_message_prompt = SystemMessagePromptTemplate(prompt=system_prompt)\n",
-    "\n",
-    "# Human Prompt mit bekannten Entitäten\n",
+    "system_message_prompt = SystemMessagePromptTemplate(prompt=system_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Humanprompt\n",
     "human_prompt = PromptTemplate(\n",
     "    template=\"\"\"\n",
     "Hier ist ein Satz aus einem historischen Lebenslauf:\n",
@@ -1559,26 +1566,58 @@
     "date: {date}\n",
     "organisationen: {organisationen}\n",
     "\n",
-    "Nutze nur die angegebenen Entitäten. Finde sinnvolle Relationen zwischen diesen Entitäten, z. B. wann und wo jemand geboren oder gestorben ist, wo jemand lebte oder tätig war.\n",
+    "Nutze nur die angegebenen Entitäten. Finde sinnvolle Relationen zwischen diesen Entitäten, z. B. wann und wo jemand geboren oder gestorben ist, wo jemand lebte oder tätig war.\n",
+    "\n",
+    "Wenn sinnvoll, gib zusätzlich im Feld \"zeit\" das relevante Datum an.\n",
     "\n",
     "{format_instructions}\n",
     "\"\"\",\n",
     "    input_variables=[\"text\", \"personen\", \"orte\", \"date\", \"organisationen\"],\n",
     "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
     ")\n",
-    "human_message_prompt = HumanMessagePromptTemplate(prompt=human_prompt)\n",
-    "\n",
+    "human_message_prompt = HumanMessagePromptTemplate(prompt=human_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Chatmodell + Prompt-Kette\n",
     "chat_prompt = ChatPromptTemplate.from_messages([system_message_prompt, human_message_prompt])\n",
     "model = ChatOllama(model=\"llama3\", temperature=0)\n",
-    "chain = LLMChain(llm=model, prompt=chat_prompt)\n",
-    "\n",
-    "# Lade JSON-Datei mit den annotierten Sätzen\n",
+    "chain = LLMChain(llm=model, prompt=chat_prompt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lade Eingabedaten\n",
     "with open(\"data/json/sätze.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    input_data = json.load(f)\n",
-    "\n",
+    "    input_data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extraktion abgeschlossen. Ergebnisse gespeichert in 'extrahierte_relationen.json'.\n"
+     ]
+    }
+   ],
+   "source": [
     "results = []\n",
     "\n",
-    "# Extraktion durchführen\n",
+    "# Extraktion starten\n",
     "for entry in input_data:\n",
     "    result = chain.run(\n",
     "        entity_types=entity_types,\n",
@@ -1594,37 +1633,23 @@
     "        \"extracted_relations\": result\n",
     "    })\n",
     "\n",
-    "# Speichern der Ergebnisse\n",
-    "with open(\"data/json/extrahierte_relationen.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "# Speichere Ergebnisse\n",
+    "with open(\"data/json/graph.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(results, f, ensure_ascii=False, indent=2)\n",
     "\n",
-    "print(\"Extraktion abgeschlossen. Ergebnisse gespeichert in 'extrahierte_relationen.json'.\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Datenbereinigung und -korrektur "
+    "print(\"Extraktion abgeschlossen. Ergebnisse gespeichert in 'graph.json'.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import json\n",
+    "\n",
     "# Input-Datei laden\n",
-    "with open(\"data/json/extrahierte_relationen.json\", 'r', encoding='utf-8') as f:\n",
+    "with open(\"data/json/graph.json\", 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "# Ergebnisliste initialisieren\n",
@@ -1641,16 +1666,16 @@
     "\n",
     "    transformed = {\n",
     "        \"text\": input_data.get(\"text\", \"\"),\n",
+    "        \"ref\": input_data.get(\"ref\", \"\"),\n",
     "        \"datei\": input_data.get(\"datei\", \"\"),\n",
     "        \"autor\": input_data.get(\"autor\", \"\"),\n",
-    "        \"ref\": input_data.get(\"ref\", \"\"),\n",
-    "        \"graph\": relations\n",
+    "        \"graph\": relations  # genau hier: Liste von Relationen\n",
     "    }\n",
     "\n",
     "    output.append(transformed)\n",
     "\n",
     "# Ausgabe-Datei schreiben\n",
-    "with open('data/json/output.json', 'w', encoding='utf-8') as f:\n",
+    "with open('data/json/graphen.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(output, f, indent=2, ensure_ascii=False)\n"
    ]
   },
@@ -1660,6 +1685,13 @@
    "source": [
     "## Daten anreichnern "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
