--- a/code.ipynb
+++ b/code.ipynb
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,13 +1802,13 @@
     "df[\"q_subjekt\"] = df[\"subjekt\"].map(qid_map_subjekt)\n",
     "\n",
     "# Q-ID für Objekte (achte auf den richtigen Spaltennamen: q_objekt)\n",
-    "unique_objekte = df[\"q_objekt\"].unique()\n",
+    "unique_objekte = df[\"objekt\"].unique()\n",
     "qid_map_objekt = {}\n",
     "for obj in unique_objekte:\n",
     "    qid = get_wikidata_qid(obj)\n",
     "    qid_map_objekt[obj] = qid\n",
     "\n",
-    "df[\"q_objekt\"] = df[\"q_objekt\"].map(qid_map_objekt)\n",
+    "df[\"q_objekt\"] = df[\"objekt\"].map(qid_map_objekt)\n",
     "\n",
     "# P-ID für Prädikate (nutze get_property_id!)\n",
     "unique_prädikate = df[\"prädikat\"].unique()\n",
@@ -1858,17 +1858,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Neue Spalten für Koordinaten\n",
-    "df[\"lat\"], df[\"lon\"] = zip(*df[\"q_objekt\"].map(get_coordinates))\n"
+    "# Optional: Nur für geografische Entitäten (objekt_type == \"location\")\n",
+    "geo_df = df[df[\"objekt_type\"] == \"location\"].copy()\n",
+    "\n",
+    "# Koordinaten abrufen\n",
+    "geo_df[\"lat\"], geo_df[\"lon\"] = zip(*geo_df[\"q_objekt\"].map(get_coordinates))\n",
+    "\n",
+    "# Ergebnis zurück in Haupt-DataFrame schreiben\n",
+    "df.loc[geo_df.index, \"lat\"] = geo_df[\"lat\"]\n",
+    "df.loc[geo_df.index, \"lon\"] = geo_df[\"lon\"]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1933,7 @@
        "      <td>location</td>\n",
        "      <td>Q705725</td>\n",
        "      <td>4 Januar 1893</td>\n",
-       "      <td>49.950000</td>\n",
+       "      <td>49.95</td>\n",
        "      <td>11.166667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1944,7 +1952,7 @@
        "      <td>Q1501295</td>\n",
        "      <td>29 September 1808</td>\n",
        "      <td>-34.033333</td>\n",
-       "      <td>19.550000</td>\n",
+       "      <td>19.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1997,8 +2005,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2015,8 +2023,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -2033,8 +2041,8 @@
        "      <td>organisation</td>\n",
        "      <td></td>\n",
        "      <td>1810</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -2069,8 +2077,8 @@
        "      <td>organisation</td>\n",
        "      <td>Q1501295</td>\n",
        "      <td>1814</td>\n",
-       "      <td>-34.033333</td>\n",
-       "      <td>19.550000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -2088,7 +2096,7 @@
        "      <td>Q1501295</td>\n",
        "      <td>1814</td>\n",
        "      <td>-34.033333</td>\n",
-       "      <td>19.550000</td>\n",
+       "      <td>19.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -2105,8 +2113,8 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -2123,8 +2131,8 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -2141,8 +2149,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -2159,8 +2167,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -2177,8 +2185,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -2195,8 +2203,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -2213,8 +2221,8 @@
        "      <td>location</td>\n",
        "      <td>Q15</td>\n",
        "      <td>1816</td>\n",
-       "      <td>21.093750</td>\n",
-       "      <td>7.188100</td>\n",
+       "      <td>21.09375</td>\n",
+       "      <td>7.1881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -2250,7 +2258,7 @@
        "      <td>Q1501295</td>\n",
        "      <td></td>\n",
        "      <td>-34.033333</td>\n",
-       "      <td>19.550000</td>\n",
+       "      <td>19.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -2285,8 +2293,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -2321,8 +2329,8 @@
        "      <td>location</td>\n",
        "      <td>Q183</td>\n",
        "      <td>Anfang September deſſelben Jahres</td>\n",
-       "      <td>51.000000</td>\n",
-       "      <td>10.000000</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -2339,8 +2347,8 @@
        "      <td>location</td>\n",
        "      <td>Q21</td>\n",
        "      <td>Anfang September deſſelben Jahres</td>\n",
-       "      <td>53.000000</td>\n",
-       "      <td>-1.000000</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -2357,8 +2365,8 @@
        "      <td>location</td>\n",
        "      <td>Q21</td>\n",
        "      <td>Anfang September deſſelben Jahres</td>\n",
-       "      <td>53.000000</td>\n",
-       "      <td>-1.000000</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -2375,8 +2383,8 @@
        "      <td>location</td>\n",
        "      <td>Q183</td>\n",
        "      <td>Anfang September deſſelben Jahres</td>\n",
-       "      <td>51.000000</td>\n",
-       "      <td>10.000000</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -2393,8 +2401,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td>Anfang September deſſelben Jahres</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -2412,7 +2420,7 @@
        "      <td>Q84</td>\n",
        "      <td>Anfang Dezember</td>\n",
        "      <td>51.507222</td>\n",
-       "      <td>-0.127500</td>\n",
+       "      <td>-0.1275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -2430,7 +2438,7 @@
        "      <td>Q84</td>\n",
        "      <td>Anfang Dezember</td>\n",
        "      <td>51.507222</td>\n",
-       "      <td>-0.127500</td>\n",
+       "      <td>-0.1275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -2447,8 +2455,8 @@
        "      <td>person</td>\n",
        "      <td></td>\n",
        "      <td>Frühjahr 1817</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2584,71 +2592,71 @@
        "29                 reiſte_mit                     Johann Adolf Bonatz   \n",
        "\n",
        "     objekt_type   q_objekt                               zeit        lat  \\\n",
-       "0       location    Q705725                      4 Januar 1893  49.950000   \n",
+       "0       location    Q705725                      4 Januar 1893      49.95   \n",
        "1       location   Q1501295                  29 September 1808 -34.033333   \n",
        "2       location    Q498565                                     52.540833   \n",
        "3       location                                                      NaN   \n",
-       "4         person                                                      NaN   \n",
-       "5         person                                                      NaN   \n",
-       "6   organisation                                          1810        NaN   \n",
+       "4         person                                                     None   \n",
+       "5         person                                                     None   \n",
+       "6   organisation                                          1810       None   \n",
        "7       location                                          1810        NaN   \n",
-       "8   organisation   Q1501295                               1814 -34.033333   \n",
+       "8   organisation   Q1501295                               1814       None   \n",
        "9       location   Q1501295                               1814 -34.033333   \n",
-       "10                                                                    NaN   \n",
-       "11                                                                    NaN   \n",
-       "12        person                                                      NaN   \n",
-       "13        person                                                      NaN   \n",
-       "14        person                                                      NaN   \n",
-       "15        person                                                      NaN   \n",
-       "16      location        Q15                               1816  21.093750   \n",
+       "10                                                                   None   \n",
+       "11                                                                   None   \n",
+       "12        person                                                     None   \n",
+       "13        person                                                     None   \n",
+       "14        person                                                     None   \n",
+       "15        person                                                     None   \n",
+       "16      location        Q15                               1816   21.09375   \n",
        "17      location                                                      NaN   \n",
        "18      location   Q1501295                                    -34.033333   \n",
        "19      location  Q25619882                                     47.233606   \n",
-       "20        person                                                      NaN   \n",
+       "20        person                                                     None   \n",
        "21      location  Q25619882                                     47.233606   \n",
-       "22      location       Q183  Anfang September deſſelben Jahres  51.000000   \n",
-       "23      location        Q21  Anfang September deſſelben Jahres  53.000000   \n",
-       "24      location        Q21  Anfang September deſſelben Jahres  53.000000   \n",
-       "25      location       Q183  Anfang September deſſelben Jahres  51.000000   \n",
-       "26        person             Anfang September deſſelben Jahres        NaN   \n",
+       "22      location       Q183  Anfang September deſſelben Jahres       51.0   \n",
+       "23      location        Q21  Anfang September deſſelben Jahres       53.0   \n",
+       "24      location        Q21  Anfang September deſſelben Jahres       53.0   \n",
+       "25      location       Q183  Anfang September deſſelben Jahres       51.0   \n",
+       "26        person             Anfang September deſſelben Jahres       None   \n",
        "27      location        Q84                    Anfang Dezember  51.507222   \n",
        "28      location        Q84                    Anfang Dezember  51.507222   \n",
-       "29        person                                 Frühjahr 1817        NaN   \n",
+       "29        person                                 Frühjahr 1817       None   \n",
        "\n",
        "          lon  \n",
        "0   11.166667  \n",
-       "1   19.550000  \n",
+       "1       19.55  \n",
        "2   11.968889  \n",
        "3         NaN  \n",
-       "4         NaN  \n",
-       "5         NaN  \n",
-       "6         NaN  \n",
+       "4        None  \n",
+       "5        None  \n",
+       "6        None  \n",
        "7         NaN  \n",
-       "8   19.550000  \n",
-       "9   19.550000  \n",
-       "10        NaN  \n",
-       "11        NaN  \n",
-       "12        NaN  \n",
-       "13        NaN  \n",
-       "14        NaN  \n",
-       "15        NaN  \n",
-       "16   7.188100  \n",
+       "8        None  \n",
+       "9       19.55  \n",
+       "10       None  \n",
+       "11       None  \n",
+       "12       None  \n",
+       "13       None  \n",
+       "14       None  \n",
+       "15       None  \n",
+       "16     7.1881  \n",
        "17        NaN  \n",
-       "18  19.550000  \n",
+       "18      19.55  \n",
        "19   9.548058  \n",
-       "20        NaN  \n",
+       "20       None  \n",
        "21   9.548058  \n",
-       "22  10.000000  \n",
-       "23  -1.000000  \n",
-       "24  -1.000000  \n",
-       "25  10.000000  \n",
-       "26        NaN  \n",
-       "27  -0.127500  \n",
-       "28  -0.127500  \n",
-       "29        NaN  "
+       "22       10.0  \n",
+       "23       -1.0  \n",
+       "24       -1.0  \n",
+       "25       10.0  \n",
+       "26       None  \n",
+       "27    -0.1275  \n",
+       "28    -0.1275  \n",
+       "29       None  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2659,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
