--- a/code.ipynb
+++ b/code.ipynb
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,6 +1720,7 @@
     "        records.append({\n",
     "            \"text\": entry.get(\"text\", \"\"),\n",
     "            \"ref\": entry.get(\"ref\", \"\"),\n",
+    "            \"nbg\": \"\",\n",
     "            \"datei\": entry.get(\"datei\", \"\"),\n",
     "            \"autor\": entry.get(\"autor\", \"\"),\n",
     "            \"subjekt\": g.get(\"subjekt\", \"\"),\n",
@@ -1736,16 +1737,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(records)"
+    "df = pd.DataFrame(records)\n",
+    "df.to_excel(\"data/json/graphen.xlsx\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(\"data/json/graphen.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,6 +1829,15 @@
     "    pid_map[prd] = pid\n",
     "\n",
     "df[\"p_wert\"] = df[\"prädikat\"].map(pid_map)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(\"data/json/graphen_kor.xlsx\", index=False)"
    ]
   },
   {
