--- a/code.ipynb
+++ b/code.ipynb
@@ -2074,6 +2074,28 @@
    "source": [
     "## RDF / OWL\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_person = pd.read_excel(\"data/person_1.xlsx\")\n",
+    "df_person.to_json(\"personen_.json\", orient=\"records\", indent=2, force_ascii=False)"
+   ]
   }
  ],
  "metadata": {
