--- a/script.ipynb
+++ b/script.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -820,17 +820,18 @@
     "    body_el = ET.SubElement(text_el, \"body\")\n",
     "    div_el = ET.SubElement(body_el, \"div\")\n",
     "\n",
-    "    # Durchlaufe alle TXT-Dateien\n",
+    "    # alle TXT-Dateien durchlaufen\n",
     "    for txt_file in txt_files:\n",
     "        txt_file_path = os.path.join(folder_path, txt_file)\n",
     "        with open(txt_file_path, 'r', encoding='utf-8') as f:\n",
     "            raw_text = f.read()\n",
-    "        clean = clean_text(raw_text)\n",
     "\n",
+    "        #vor jeder nuen Seite wird geschloßenes pb-Tad zugefügt, das Attribut n bekommt den Dateinamen ohne txt\n",
     "        file_base = os.path.splitext(txt_file)[0]\n",
     "        pb_el = ET.SubElement(div_el, \"pb\", n=file_base)\n",
     "\n",
-    "        paragraphs = clean.split('\\n\\n')\n",
+    "        #alle Absätze wurden anhand von doppelten Zeilenumbruch in p-Tag gepackt\n",
+    "        paragraphs = raw_text.split('\\n\\n')\n",
     "        for para in paragraphs:\n",
     "            para = para.strip()\n",
     "            if para:\n",
@@ -849,6 +850,62 @@
     "        output_file.write(pretty_xml)\n",
     "\n",
     "    print(f\"XML-Datei erstellt: {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.4 Informationsextraktion aus Texten"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4.1 Named Entity Recognition "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4.2 Relationsextraktion "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.3 XML/TEI-Modellierung (Teil 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.5 Datenabgleich"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.6 RDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.7 OWL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.8 Turtle "
    ]
   }
  ],
