--- a/script.ipynb
+++ b/script.ipynb
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,17 +1481,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extraktion abgeschlossen. Ergebnisse gespeichert in 'graph.json'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = []\n",
     "\n",
@@ -1506,14 +1498,25 @@
     "        date=\", \".join(entry.get(\"date\", [])),\n",
     "        organisationen=\", \".join(entry.get(\"organisationen\", []))\n",
     "    )\n",
-    "    results.append({\n",
-    "        \"input\": entry,\n",
-    "        \"extracted_relations\": result\n",
-    "    })\n",
+    "    # hier gleich transformieren, kein triple.json\n",
+    "    try:\n",
+    "        relations = json.loads(result)\n",
+    "    except json.JSONDecodeError:\n",
+    "        relations = []\n",
     "\n",
+    "    transformed = {\n",
+    "        \"text\": entry.get(\"text\", \"\"),\n",
+    "        \"ref\": entry.get(\"ref\", \"\"),\n",
+    "        \"datei\": entry.get(\"datei\", \"\"),\n",
+    "        \"autor\": entry.get(\"autor\", \"\"),\n",
+    "        \"graph\": relations\n",
+    "    }\n",
+    "    results.append(transformed)\n",
+    "    \n",
+    "    \n",
     "# Speichere Ergebnisse\n",
     "with open(\"data/5.4.2_RE/triple.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(results, f, ensure_ascii=False, indent=2)"
+    "    json.dump(results, f, ensure_ascii=False, indent=2)    \n"
    ]
   },
   {
@@ -1525,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,13 +1539,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Input-Datei laden\n",
-    "with open(\"data/json/graph.json\", 'r', encoding='utf-8') as f:\n",
+    "with open(\"data/5.4.2_RE/triple_bereinigt.json\", 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame strukturieren\n",
+    "records = []\n",
+    "for entry in data:\n",
+    "    for g in entry.get(\"graph\", []):\n",
+    "        records.append({\n",
+    "            \"text\": entry.get(\"text\", \"\"),\n",
+    "            \"ref\": entry.get(\"ref\", \"\"),\n",
+    "            \"nbg\": \"\",\n",
+    "            \"datei\": entry.get(\"datei\", \"\"),\n",
+    "            \"autor\": entry.get(\"autor\", \"\"),\n",
+    "            \"subjekt\": g.get(\"subjekt\", \"\"),\n",
+    "            \"subjekt_type\": g.get(\"subjekt_type\", \"\"),\n",
+    "            \"q_subjekt\": \"\",\n",
+    "            \"prädikat\": g.get(\"prädikat\", \"\"),\n",
+    "            \"p_wert\": \"\",\n",
+    "            \"objekt\": g.get(\"objekt\", \"\"),\n",
+    "            \"objekt_type\": g.get(\"objekt_type\", \"\"),\n",
+    "            \"q_objekt\":\"\",\n",
+    "            \"zeit\": g.get(\"zeit\", \"\")\n",
+    "        })\n"
    ]
   },
   {
@@ -1551,52 +1582,316 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ergebnisliste initialisieren\n",
-    "output = []\n",
-    "\n",
-    "for entry in data:\n",
-    "    input_data = entry.get(\"input\", {})\n",
-    "    relations_str = entry.get(\"extracted_relations\", \"[]\")\n",
-    "    \n",
-    "    try:\n",
-    "        relations = json.loads(relations_str)\n",
-    "    except json.JSONDecodeError:\n",
-    "        relations = []\n",
-    "\n",
-    "    transformed = {\n",
-    "        \"text\": input_data.get(\"text\", \"\"),\n",
-    "        \"ref\": input_data.get(\"ref\", \"\"),\n",
-    "        \"datei\": input_data.get(\"datei\", \"\"),\n",
-    "        \"autor\": input_data.get(\"autor\", \"\"),\n",
-    "        \"graph\": relations  # genau hier: Liste von Relationen\n",
+    "df = pd.DataFrame(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Q-ID (Entitäten)\n",
+    "def get_wikidata_qid(label):\n",
+    "    url = \"https://www.wikidata.org/w/api.php\"\n",
+    "    params = {\n",
+    "        \"action\": \"wbsearchentities\",\n",
+    "        \"search\": label,\n",
+    "        \"language\": \"de\",\n",
+    "        \"format\": \"json\",\n",
+    "        \"type\": \"item\",\n",
+    "        \"limit\": 1\n",
     "    }\n",
+    "    resp = requests.get(url, params=params)\n",
+    "    data = resp.json()\n",
+    "    if data.get(\"search\"):\n",
+    "        return data[\"search\"][0][\"id\"]\n",
+    "    return \"\"\n",
     "\n",
-    "    output.append(transformed)\n",
+    "#P-ID (Properties)\n",
+    "def get_property_id(label):\n",
+    "    url = \"https://www.wikidata.org/w/api.php\"\n",
+    "    params = {\n",
+    "        \"action\": \"wbsearchentities\",\n",
+    "        \"search\": label,\n",
+    "        \"language\": \"de\",\n",
+    "        \"format\": \"json\",\n",
+    "        \"type\": \"property\",\n",
+    "        \"limit\": 1\n",
+    "    }\n",
+    "    resp = requests.get(url, params=params)\n",
+    "    data = resp.json()\n",
+    "    if data.get(\"search\"):\n",
+    "        return data[\"search\"][0][\"id\"]\n",
+    "    return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q-ID für Subjekte\n",
+    "unique_subjekte = df[\"subjekt\"].unique()\n",
+    "qid_map_subjekt = {}\n",
+    "for subj in unique_subjekte:\n",
+    "    qid = get_wikidata_qid(subj)\n",
+    "    qid_map_subjekt[subj] = qid\n",
     "\n",
-    "# Ausgabe-Datei schreiben\n",
-    "with open('data/json/graphen.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(output, f, indent=2, ensure_ascii=False)"
+    "df[\"q_subjekt\"] = df[\"subjekt\"].map(qid_map_subjekt)\n",
+    "\n",
+    "# Q-ID für Objekte (achte auf den richtigen Spaltennamen: q_objekt)\n",
+    "unique_objekte = df[\"objekt\"].unique()\n",
+    "qid_map_objekt = {}\n",
+    "for obj in unique_objekte:\n",
+    "    qid = get_wikidata_qid(obj)\n",
+    "    qid_map_objekt[obj] = qid\n",
+    "\n",
+    "df[\"q_objekt\"] = df[\"objekt\"].map(qid_map_objekt)\n",
+    "\n",
+    "# P-ID für Prädikate (nutze get_property_id!)\n",
+    "unique_prädikate = df[\"prädikat\"].unique()\n",
+    "pid_map = {}\n",
+    "for prd in unique_prädikate:\n",
+    "    pid = get_property_id(prd)\n",
+    "    pid_map[prd] = pid\n",
+    "\n",
+    "df[\"p_wert\"] = df[\"prädikat\"].map(pid_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(\"data/5.4.2_RE/graphen.xlsx\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.6 RDF"
+    "## 5.6 Semantic Web Technologie"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 182,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 5.7 OWL"
+    "from rdflib import Graph, Namespace, Literal, URIRef, BNode\n",
+    "from rdflib.namespace import XSD, RDFS, RDF\n",
+    "import pandas as pd\n",
+    "import rdflib\n",
+    "import re\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 177,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 5.8 Turtle "
+    "#Datum normalisieren\n",
+    "URL_RE = re.compile(r'^https?://', re.I)\n",
+    "\n",
+    "def clean_id(x) -> str:\n",
+    "    return str(x).strip()\n",
+    "\n",
+    "def is_qid(s: str) -> bool:\n",
+    "    return bool(s) and s.upper().startswith(\"Q\")\n",
+    "\n",
+    "def is_pid(s: str) -> bool:\n",
+    "    return bool(s) and s.upper().startswith(\"P\")\n",
+    "\n",
+    "def parse_time_literal(s: str) -> Literal:\n",
+    "    \"\"\"\n",
+    "    Interpretiert 'zeit' als typisierten Literal:\n",
+    "    - 'MM-YYYY' -> xsd:gYearMonth ('YYYY-MM')\n",
+    "    - 'YYYY-MM' -> xsd:gYearMonth\n",
+    "    - 'YYYY-MM-DD' -> xsd:date\n",
+    "    - 'YYYY' -> xsd:gYear\n",
+    "    sonst: Plain Literal\n",
+    "    \"\"\"\n",
+    "    s = str(s).strip()\n",
+    "\n",
+    "    # \"MM-YYYY\" -> \"YYYY-MM\"\n",
+    "    m = re.match(r'^(0[1-9]|1[0-2])-(\\d{4})$', s)\n",
+    "    if m:\n",
+    "        mm, yyyy = m.group(1), m.group(2)\n",
+    "        return Literal(f\"{yyyy}-{mm}\", datatype=XSD.gYearMonth)\n",
+    "\n",
+    "    # \"YYYY-MM-DD\"\n",
+    "    if re.match(r'^\\d{4}-\\d{2}-\\d{2}$', s):\n",
+    "        return Literal(s, datatype=XSD.date)\n",
+    "\n",
+    "    # \"YYYY-MM\"\n",
+    "    if re.match(r'^\\d{4}-\\d{2}$', s):\n",
+    "        return Literal(s, datatype=XSD.gYearMonth)\n",
+    "\n",
+    "    # \"YYYY\"\n",
+    "    if re.match(r'^\\d{4}$', s):\n",
+    "        return Literal(s, datatype=XSD.gYear)\n",
+    "\n",
+    "    # sonst unverändert\n",
+    "    return Literal(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(\"data/5.4.2_RE/graphen_bereinigt.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Namespaces\n",
+    "WD  = Namespace(\"http://www.wikidata.org/entity/\")\n",
+    "WDT = Namespace(\"http://www.wikidata.org/prop/direct/\")\n",
+    "P   = Namespace(\"http://www.wikidata.org/prop/\")\n",
+    "PS  = Namespace(\"http://www.wikidata.org/prop/statement/\")\n",
+    "PQ  = Namespace(\"http://www.wikidata.org/prop/qualifier/\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RDF-Graph anlegen\n",
+    "g = Graph()\n",
+    "g.bind(\"wd\", WD)\n",
+    "g.bind(\"wdt\", WDT)\n",
+    "g.bind(\"p\", P)\n",
+    "g.bind(\"ps\", PS)\n",
+    "g.bind(\"pq\", PQ)\n",
+    "g.bind(\"rdfs\", RDFS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in df.iterrows():\n",
+    "    # Pflichtfelder prüfen\n",
+    "    if pd.isna(row.get(\"q_subjekt\")) or pd.isna(row.get(\"p_wert\")) or pd.isna(row.get(\"q_objekt\")):\n",
+    "        continue\n",
+    "\n",
+    "    subjekt_id  = clean_id(row[\"q_subjekt\"])\n",
+    "    property_id = clean_id(row[\"p_wert\"])\n",
+    "    objekt_id   = clean_id(row[\"q_objekt\"])\n",
+    "    objekt_type = str(row.get(\"objekt_type\", \"\")).strip().lower()\n",
+    "\n",
+    "    s = WD[subjekt_id]\n",
+    "    p = WDT[property_id]\n",
+    "\n",
+    "    # Objekt bestimmen (URIRef oder Literal) bei \"person\"-Subjekt\n",
+    "    if objekt_type == \"person\":\n",
+    "        if is_qid(objekt_id):\n",
+    "            o = WD[objekt_id]\n",
+    "        else:\n",
+    "            try:\n",
+    "                num = float(objekt_id)\n",
+    "                o = Literal(int(num), datatype=XSD.integer) if num.is_integer() else Literal(num, datatype=XSD.decimal)\n",
+    "            except ValueError:\n",
+    "                o = Literal(objekt_id)\n",
+    "    elif objekt_type in {\"organisation\", \"location\", \"tätigkeit\", \"event\"}:\n",
+    "        o = WD[objekt_id] if is_qid(objekt_id) else Literal(objekt_id)\n",
+    "    elif objekt_type == \"datum\":\n",
+    "        try:\n",
+    "            num = float(objekt_id)\n",
+    "            o = Literal(int(num), datatype=XSD.integer) if num.is_integer() else Literal(num, datatype=XSD.decimal)\n",
+    "        except ValueError:\n",
+    "            o = Literal(objekt_id)\n",
+    "    else:\n",
+    "        o = Literal(objekt_id)\n",
+    "\n",
+    "    g.add((s, p, o))\n",
+    "\n",
+    "    # Reifiziertes Statement (p:/ps:/pq:) für Qualifier + Quelle\n",
+    "    stmt = BNode()\n",
+    "    g.add((s, P[property_id], stmt))\n",
+    "    g.add((stmt, PS[property_id], o))\n",
+    "\n",
+    "    # Zeit-Qualifiziere\n",
+    "    zeit_val = row.get(\"zeit\")\n",
+    "    q_zeit_prop = str(row.get(\"q_zeit\")).strip() if not pd.isna(row.get(\"q_zeit\")) else \"\"\n",
+    "\n",
+    "    if not pd.isna(zeit_val):\n",
+    "        z = str(zeit_val).strip()\n",
+    "\n",
+    "        if \"bis\" in z:\n",
+    "            # Zeitraum: z.B. \"02-1834 bis 04-1834\"\n",
+    "            left, right = [part.strip() for part in z.split(\"bis\", 1)]\n",
+    "            if left:\n",
+    "                g.add((stmt, PQ[\"P580\"], parse_time_literal(left)))\n",
+    "            if right:\n",
+    "                g.add((stmt, PQ[\"P582\"], parse_time_literal(right)))\n",
+    "        else:\n",
+    "            # Einzelnes Datum → q_zeit als P-ID nutzen, sonst P585\n",
+    "            pq_prop_id = q_zeit_prop if is_pid(q_zeit_prop) else \"P585\"\n",
+    "            if is_qid(z):\n",
+    "                qual_obj = WD[z]\n",
+    "            else:\n",
+    "                qual_obj = parse_time_literal(z)\n",
+    "            g.add((stmt, PQ[pq_prop_id], qual_obj))\n",
+    "\n",
+    "    # Quelle-Qualifier\n",
+    "    nbg = row.get(\"ref\")\n",
+    "    if pd.notna(nbg):\n",
+    "        src = str(nbg).strip()\n",
+    "        if src:\n",
+    "            if URL_RE.match(src):\n",
+    "                g.add((stmt, PQ[\"P854\"], URIRef(src)))  # URL als URIRef\n",
+    "            else:\n",
+    "                g.add((stmt, PQ[\"P854\"], Literal(src, lang=\"de\")))\n",
+    "\n",
+    "    # Labels\n",
+    "    label_subjekt  = row.get(\"subjekt\")\n",
+    "    label_property = row.get(\"prädikat\")\n",
+    "    label_objekt   = row.get(\"objekt\")\n",
+    "\n",
+    "    if pd.notna(label_subjekt) and str(label_subjekt).strip():\n",
+    "        g.add((s, RDFS.label, Literal(str(label_subjekt).strip(), lang=\"de\")))\n",
+    "\n",
+    "    if pd.notna(label_property) and str(label_property).strip():\n",
+    "        g.add((WDT[property_id], RDFS.label, Literal(str(label_property).strip(), lang=\"de\")))\n",
+    "\n",
+    "    if pd.notna(label_objekt) and str(label_objekt).strip() and is_qid(objekt_id):\n",
+    "        g.add((WD[objekt_id], RDFS.label, Literal(str(label_objekt).strip(), lang=\"de\")))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N67205f2d97514c0ea38c3f7f4c293dd3 (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.serialize(\"data/5.6_Semantic_Web/Turtle-Herrnhut.ttl\", format=\"turtle\")"
    ]
   }
  ],
